# habbit_tracker_backend

./: .dockerignore  .env.template  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: settings.py  urls.py
deploy/: docker-compose.yml
habits/: admin.py  apps.py  exceptions.py  models.py  paginators.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py
htmlcov/: index.html
nginx/: Dockerfile  nginx.conf
users/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_customuser_city.py  0003_customuser_tg_chat_id.py
