[project]
name = "habit-tracker-backend"
version = "0.1.0"
description = ""
authors = [
    { name = "Oleg Matyushenko", email = "mos_olma@mail.ru" }
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django (>=6.0.6,<7.0.0)",
    "djangorestframework (>=3.17.1,<4.0.0)",
    "pillow (>=12.2.0,<13.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
    "django-filter (>=25.2,<26.0)"
]

[tool.poetry]
packages = [{ include = "config" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
lint = [
    "black (>=26.5.1,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)"
]
test = [
    "coverage (>=7.14.3,<8.0.0)"
]

[tool.black]
line-length = 119
extend-exclude = '''
\\.git
| \\.venv
| venv
| env
| __pycache__
'''

[tool.isort]
line_length = 119
profile = "black"
skip_glob = [".venv/*", "venv/*", "env/*", "__pycache__/*"]